2003-05-24 Damien McGinnes
	* Mercator/Segment.h Mercator/Segment.cpp: Cleaned up Segment, removed
	  tile.cpp and tile.h and moved them into Segment
	* TODO: added some ideas
	* AUTHORS: added some authors
	* added getHeightAndNormal to segment
	* addded some test code for modifying terrain to segment

2003-05-14  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h, Mercator/Segment.cpp: Add a destructor so
	  we can free the vertex storage.

2003-04-25  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp, Mercator/Segment.h:
	  Initialise min and max properly, and make their accessors const.

2003-04-25  Damien McGinnes

	* Mercator/tile.cpp,h: Added min and max calcs
	* Mercator/Segment.cpp,h: added accessors for min and max

2003-04-19  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.h: Add accessor for resolution variable.

2003-04-17  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Matrix.cpp, Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Terrain.cpp: Move source into Mercator subdir
	  for portability.

2003-03-31 Damien McGinnes

	* src/tile.cpp: modified algorithm, cleaned up code slightly
	  algorithm now generates 1 tile very quickly, but has problems
	  on steep tiles where one side is quite flat. (seams are more
	  visible).

2003-03-29  Al Riddoch  <alriddoch@zepler.org>

	* src/tile.cpp: Tweak tile() to create a size+1 * size+1 segment.

	* src/Segment.cpp: Switch to using damien's algorithm for
	  testing.

2003-03-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Matrix.h, src/Matrix.cpp: Add matrix class for handling
	  basepoints.

	* src/tile.h, src/tile.cpp: damiens experimental qRMD implementation.

	* src/Terrain.h, src/Terrain.cpp, src/Segment.cpp: Use Matrix to
	  handle basepoints.

	* src/Segment.cpp: Use memcpy to make copying rows more efficient.

2003-03-19  Al Riddoch  <alriddoch@zepler.org>

	* src/Terrain.h, src/Terrain.cpp: Make value for missing points the